--- a/aitoolspros/my-ai-bot/package.json
+++ b/aitoolspros/my-ai-bot/package.json
@@ -13,18 +13,6 @@
     "react-dom": "^18",
     "next": "14.1.0",
     "ai": "^3.0.0",
-    "@ai-sdk/openai": "^0.0.1",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "@ai-sdk/openai": "^0.0.1"
   }
 }
